# squirrel_lsp

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: ast_visitor.rs  main.rs  scope_table.rs  squirrel_ast.rs  squirrel_formatter.rs  squirrel_lexer.rs  squirrel_parser.rs  squirrel_printer.rs
src/grammar/: block_statement.rs  break_statement.rs  class_definition.rs  mod.rs  (+16 more)
test_cases/: array_access.nut  array_access.nut.ast.json  array_access.nut.nut.formatted  array_access.nut.nut.printed  array_access.nut.tokens.json  class_declaration.nut  class_declaration.nut.ast.json  class_declaration.nut.nut.formatted  class_declaration.nut.nut.printed  class_declaration.nut.tokens.json  comments.nut  comments.nut.ast.json  comments.nut.nut.formatted  comments.nut.nut.printed  comments.nut.tokens.json  complex_expressions.nut  complex_expressions.nut.ast.json  complex_expressions.nut.nut.formatted  complex_expressions.nut.tokens.json  const_declaration.nut  const_declaration.nut.ast.json  const_declaration.nut.nut.formatted  const_declaration.nut.nut.printed  const_declaration.nut.tokens.json  do_while_statement.nut  do_while_statement.nut.ast.json  do_while_statement.nut.nut.formatted  do_while_statement.nut.nut.printed  do_while_statement.nut.tokens.json  dot_expressions.nut  dot_expressions.nut.ast.json  dot_expressions.nut.nut.formatted  dot_expressions.nut.tokens.json  enum_declaration.nut  enum_declaration.nut.ast.json  enum_declaration.nut.nut.formatted  enum_declaration.nut.nut.printed  enum_declaration.nut.tokens.json  for_statement.nut  for_statement.nut.ast.json  (+45 more)
(+23 files in other folders)
