[package]
name = "squirrel_lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-lsp = "0.20.0"
tokio = { version = "1.32.0", features = ["full"] }
tree-sitter = "0.20.10"
tree-sitter-squirrel = "1.0.0"
serde = "1.0"
serde_json = "1.0"
glob = "0.3.1"
difference = "2.0.0"

[build-dependencies]
cc="*"
